hphp/hack/test/typecheck/strict_switch/nullable_bool.php.new_exhaustivity.exp
ERROR: File "nullable_bool.php", line 30, characters 3-77:
This `switch` statement is nonexhaustive. At least the following cases are missing: `false` (Typing[4019])
  File "nullable_bool.php", line 30, characters 11-12:
  The scrutinee has type `?bool`.
